# recommendation-study

./: .gitignore  README.md  pyproject.toml
data/: download.sh
notebooks/: 000_EDA.ipynb
